--- a/templates/hello.html
+++ b/templates/hello.html
@@ -29,5 +29,6 @@
   <li><a href="/upload">Upload a photo</a></li>
   <li><a href="/friends">Friends</a></li>
   <li><a href="/logout">Logout</a></li>
+  <li><a href="/galary">View the Galary</a></li>
   <li><a href="/">Home</a></li>
 </ul>
