--- a/templates/hello.html
+++ b/templates/hello.html
@@ -28,7 +28,8 @@
 <ul>
   <li><a href="/upload">Upload a photo</a></li>
   <li><a href="/friends">Friends</a></li>
-  <li><a href="/logout">Logout</a></li>
   <li><a href="/galary">View the Galary</a></li>
+  <li><a href="/logout">Logout</a></li>
+  <li><a href="user_albums">Manage your albums</a></li>
   <li><a href="/">Home</a></li>
 </ul>
