--- a/templates/user_album.html
+++ b/templates/user_album.html
@@ -14,6 +14,10 @@
         <img
           src='data:image/jpg;base64, {{ base64.b64encode(photo[0]).decode("ascii") }}'
         />
+        <form method="post" action="/user_albums/{{album_id}}">
+          <input type="hidden" name="picture_id" value="{{photo[2]}}" />
+          <input type="submit" value="DELETE" />
+        </form>
       </li>
       {% endfor %}
     </ul>
