--- a/templates/hello.html
+++ b/templates/hello.html
@@ -32,6 +32,6 @@
   <li><a href="/logout">Logout</a></li>
   <li><a href="user_albums">Manage your albums</a></li>
   <li><a href="/all_photos">View all photos by tag</a></li>
-  <li><a href="/photos">Get all user photos by tag</a></li>
+  <li><a href="/photos">View all user photos by tag</a></li>
   <li><a href="/">Home</a></li>
 </ul>
