--- a/templates/hello.html
+++ b/templates/hello.html
@@ -33,5 +33,6 @@
   <li><a href="user_albums">Manage your albums</a></li>
   <li><a href="/allPhotosView">View all photos</a></li>
   <li><a href="/photosView">Get all user photos</a></li>
+  <li><a href="/leaderboard">See the leaderboard</a></li>
   <li><a href="/">Home</a></li>
 </ul>
