--- a/templates/hello.html
+++ b/templates/hello.html
@@ -31,8 +31,9 @@
   <li><a href="/galary">View the Galary</a></li>
   <li><a href="/logout">Logout</a></li>
   <li><a href="user_albums">Manage your albums</a></li>
-  <li><a href="/allPhotosView">View all photos</a></li>
-  <li><a href="/photosView">Get all user photos</a></li>
+  <li><a href="/all_photos">View all photos by tag</a></li>
+  <li><a href="/photos">Get all user photos by tag</a></li>
   <li><a href="/leaderboard">See the leaderboard</a></li>
+  <li><a href="/recommendations">See what photos you may also like</a></li>
   <li><a href="/">Home</a></li>
 </ul>
