added comment search

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -35,5 +35,6 @@
   <li><a href="/photos">Get all user photos by tag</a></li>
   <li><a href="/leaderboard">See the leaderboard</a></li>
   <li><a href="/recommendations">See what photos you may also like</a></li>
+  <li><a href="/comment_search">Search specific comments</a></li>
   <li><a href="/">Home</a></li>
 </ul>
